updated the header and added my brand statement to the about me.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <header>
-    <h1>Krystyn Smith</h1>
     <nav>
     <!--clickable nav links-->    
     <ul>
@@ -24,8 +23,10 @@
 
 <body>
 <!--geometric green/blue banner-->    
-<div>
-<img src="./assets/bluegradient.png" alt="a foggy forest scene" class="banner">
+<div id="bannerBox">
+<img src="./assets/bluegradient.png" alt="geometric blue and green shapes" class="banner" style="width:100%">
+<h1 class="meIntro">Hi, I'm Krystyn and I am an evolving web developer
+</br>and project manager.</h1>
 </div>
 
 <!--about me section-->    
@@ -36,7 +37,13 @@
             <img src="./assets/krystyn.jpg" alt="a picture of Krystyn smiling" class="krystyn">
         </div>
         <div class="words">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+            <p>Evolving web developer with a background in project management and Kaizen.
+                Currently earning a certificate through Northwestern University in a coding bootcamp.
+                Strengths in HTML, CSS, JavaScript, and Agile.
+                Creative and innovative problem solver who is passionate about technology accessibility.
+                I have an established history of leading teams in projects with Lean practices at the core of everything we do.
+                With each project, I keep the end user at the forefront of the decisions that are made.
+            </p> 
         </div>
     </div>
 </section>
