chagned font. put a background on the contacts section so it is easier to read, and I updated the information there.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, intitial-scale=1.0">
+<meta name="viewport" content="width=device-width">
 <title>Krystyn Smith</title>
 <meta name="author" content="Krystyn Smtih">
 <link rel="stylesheet" href="./assets/style.css">
@@ -25,8 +25,7 @@
 <!--geometric green/blue banner-->    
 <div id="bannerBox">
 <img src="./assets/bluegradient.png" alt="geometric blue and green shapes" class="banner" style="width:100%">
-<h1 class="meIntro">Hi, I'm Krystyn and I am an evolving web developer
-</br>and project manager.</h1>
+<h1 class="meIntro">Hi, I'm Krystyn and I am a web developer and project manager.</h1>
 </div>
 
 <!--about me section-->    
@@ -37,7 +36,7 @@
             <img src="./assets/krystyn.jpg" alt="a picture of Krystyn smiling" class="krystyn">
         </div>
         <div class="words">
-            <p>Evolving web developer with a background in project management and Kaizen.
+            <p id="bio">Evolving web developer with a background in project management and Kaizen.
                 Currently earning a certificate through Northwestern University in a coding bootcamp.
                 Strengths in HTML, CSS, JavaScript, and Agile.
                 Creative and innovative problem solver who is passionate about technology accessibility.
@@ -82,18 +81,20 @@
 <!--contact section with clickable links-->    
 <section>
     <h2 id="contact">Contact</h2>
-        <ul>
-            <li>
-                <a href="https://github.com/krysmit">GitHub</a>
+    <div></div>
+        <ul class="contactInfo">
+            <li class="listInfo">
+                <a class="listInfo" href="https://github.com/krysmit">GitHub</a>
             </li>
-            <li>
-                <a href="https://www.linkedin.com/in/krystyn-smith-37477694/">LinkedIn</a>    
+            <li class="listInfo">
+                <a class="listInfo" href="https://www.linkedin.com/in/krystyn-smith-37477694/">LinkedIn</a>    
             </li>
-            <li>Phone: 555-555-5555</li>
-            <li>
-                <a href="mailto:krskrsmith@gmail.com">Email: krskrsmith@gmail.com</a>
+            <li class="listInfo">Phone: (219) 363-0748</li>
+            <li class="listInfo">
+                <a class="listInfo" href="mailto:krskrsmith@gmail.com">Email: krskrsmith@gmail.com</a>
             </li>
         </ul>
+    </div>
 </section>
 
 <!--'made by' at bottom of screen-->    
