--- a/index.html
+++ b/index.html
@@ -54,23 +54,23 @@
     <!--larger top project with link-->    
     <div class="sidebyside">
         <div class="knowledge">
-            <p class="titles-for-content">HTML & CSS</p>
-            <a href="https://github.com/krysmit/Code-Refractor" target="_blank">
-            <img src="./assets/coding-freak.gif" alt="a person coding on two screens" class="featuredcontent"> 
+            <p class="titles-for-content">Train Accessibility Project</p>
+            <a href="https://krysmit.github.io/Train-Accessibility-Project/" target="_blank">
+            <img src="./assets/trainproject.png" alt="screenshot of train accessibility app" class="featuredcontent"> 
             </a>
         </div>
     </div>
     <!--the two side-by-side smaller bottom project pictures with links-->    
     <div class="sidebyside"> 
-        <div class="scratchgames">
-            <p class="titles-for-content">Scratch Games</p>
-            <a href="https://scratch.mit.edu/users/bubblepopsmak/" target="_blank">
+        <div id="projHi1">
+            <p class="titles-for-content">Event Calendar</p>
+            <a href="https://krysmit.github.io/Event-Calendar-05/" target="_blank">
             <img src="./assets/boxessparkles.jpg" alt="shiny boxes and pixels" class="othercontent">
             </a>
         </div>
-        <div class="currentprojects">
-            <p class="titles-for-content">Current Projects</p>
-            <a href="https://github.com/krysmit" target="_blank">
+        <div id="projHi2">
+            <p class="titles-for-content">Coding Quiz Game</p>
+            <a href="https://krysmit.github.io/CodingQuiz-04/" target="_blank">
             <img src="./assets/workspace.JPG" alt="a laptop and glasses on a desk" class="othercontent">
             </a>
         </div> 
@@ -81,7 +81,7 @@
 <!--contact section with clickable links-->    
 <section>
     <h2 id="contact">Contact</h2>
-    <div></div>
+    <div>
         <ul class="contactInfo">
             <li class="listInfo">
                 <a class="listInfo" href="https://github.com/krysmit">GitHub</a>
