set up all screenshots for featured projects. edited the media query. edited the header as the screen size changed.

--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
 <!--projects section-->    
 <section>
     <div class="projectalignment">
-    <h2 id="projects">Projects</h2>
+    <h3 id="projects">Projects</h3>
     <!--larger top project with link-->    
     <div class="sidebyside">
         <div class="knowledge">
             <p class="titles-for-content">Train Accessibility Project</p>
+            <p class="words-for-content">This project connects its users to CTA assessibility information based specifically on their planned trip.</p>
             <a href="https://krysmit.github.io/Train-Accessibility-Project/" target="_blank">
             <img src="./assets/trainproject.png" alt="screenshot of train accessibility app" class="featuredcontent"> 
             </a>
@@ -64,14 +65,16 @@
     <div class="sidebyside"> 
         <div id="projHi1">
             <p class="titles-for-content">Event Calendar</p>
+            <p class="words-for-content">A calendar that highlights past, present, and future hours differently while retaining informatoin locally.</p>
             <a href="https://krysmit.github.io/Event-Calendar-05/" target="_blank">
-            <img src="./assets/boxessparkles.jpg" alt="shiny boxes and pixels" class="othercontent">
+            <img src="./assets/eventcalendar.png" alt="shiny boxes and pixels" class="othercontent">
             </a>
         </div>
         <div id="projHi2">
             <p class="titles-for-content">Coding Quiz Game</p>
+            <p class="words-for-content">A quiz to review coding information that bases your score on how quickly you finish the game. Records high scores locally.</p>
             <a href="https://krysmit.github.io/CodingQuiz-04/" target="_blank">
-            <img src="./assets/workspace.JPG" alt="a laptop and glasses on a desk" class="othercontent">
+            <img src="./assets/codingquiz.png" alt="a laptop and glasses on a desk" class="othercontent">
             </a>
         </div> 
     </div>
@@ -80,7 +83,7 @@
 
 <!--contact section with clickable links-->    
 <section>
-    <h2 id="contact">Contact</h2>
+    <h4 id="contact">Contact</h4>
     <div>
         <ul class="contactInfo">
             <li class="listInfo">
@@ -99,7 +102,7 @@
 
 <!--'made by' at bottom of screen-->    
 <footer>
-<h3>Made by: Krystyn Smith</h3>
+<h5>Made by: Krystyn Smith</h5>
 </footer>
 
 </body>
