added downloadable resume

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="#aboutme" class="page-links">About Me</a></li>
         <li><a href="#projects" class="page-links">Projects</a></li>
         <li><a href="#contact" class="page-links">Contact</a></li>
+        <li><a href= "documents/Krystyns General Resume.pdf" class="page-links">Resume</a></li>
     </ul>
     </nav>
 </header>
