changed out the train app for the newer canopus app

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <!--larger top project with link-->    
     <div class="sidebyside">
         <div class="knowledge">
-            <p class="titles-for-content">Train Accessibility Project</p>
-            <p class="words-for-content">This project connects its users to CTA assessibility information based specifically on their planned trip.</p>
-            <a href="https://krysmit.github.io/Train-Accessibility-Project/" target="_blank">
-            <img src="./assets/trainproject.png" alt="screenshot of train accessibility app" class="featuredcontent"> 
+            <p class="titles-for-content">Canopus</p>
+            <p class="words-for-content">This project provides users with information about the visibility of the sky to see space objects.</p>
+            <a href="https://boiling-brook-54454.herokuapp.com/" target="_blank">
+            <img src="./assets/cap.png" alt="screenshot of canopus app" class="featuredcontent"> 
             </a>
         </div>
     </div>
