editing static text in html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="#aboutme" class="page-links">About Me</a></li>
         <li><a href="#projects" class="page-links">Projects</a></li>
         <li><a href="#contact" class="page-links">Contact</a></li>
-        <li><a href= "documents/Krystyns General Resume.pdf" class="page-links">Resume</a></li>
+        <li><a href= "documents/KrystynSmith-Resume.pdf" class="page-links">Resume</a></li>
     </ul>
     </nav>
 </header>
@@ -26,7 +26,7 @@
 <!--geometric green/blue banner-->    
 <div id="bannerBox">
 <img src="./assets/bluegradient.png" alt="geometric blue and green shapes" class="banner" style="width:100%">
-<h1 class="meIntro">Hi, I'm Krystyn and I am a web developer and project manager.</h1>
+<h1 class="meIntro">Hi, I'm Krystyn. </br>A full stack developer and project manager.</h1>
 </div>
 
 <!--about me section-->    
@@ -38,11 +38,11 @@
         </div>
         <div class="words">
             <p id="bio">Evolving web developer with a background in project management and Kaizen.
-                Currently earning a certificate through Northwestern University in a coding bootcamp.
-                Strengths in HTML, CSS, JavaScript, and Agile.
-                Creative and innovative problem solver who is passionate about technology accessibility.
-                I have an established history of leading teams in projects with Lean practices at the core of everything we do.
-                With each project, I keep the end user at the forefront of the decisions that are made.
+                        Currently earning a certificate through Northwestern University in a coding bootcamp.
+                        Strengths in HTML/CSS, JavaScript, Node.js, MySQL, and Agile.
+                        Creative and innovative problem solver who is passionate about technology accessibility.
+                        Has an established history of leading teams in projects with Lean practices at the core of every task.
+                        With each project, keeps the end user at the forefront of the decisions that are made.
             </p> 
         </div>
     </div>
@@ -58,7 +58,7 @@
             <p class="titles-for-content">Canopus</p>
             <p class="words-for-content">This project provides users with information about the visibility of the sky to see space objects.</p>
             <a href="https://boiling-brook-54454.herokuapp.com/" target="_blank">
-            <img src="./assets/cap.png" alt="screenshot of canopus app" class="featuredcontent"> 
+            <img src="./assets/cap.JPG" alt="screenshot of canopus app" class="featuredcontent"> 
             </a>
         </div>
     </div>
