added github links

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="sidebyside-aboutme">
         <div class="about-and-pic">
             <h2 id="aboutme">About Me</h2>
-            <img src="./assets/krystyn.jpg" alt="a picture of Krystyn smiling" class="krystyn">
+            <img src="./assets/1619395462182.jpg" alt="a picture of Krystyn smiling" class="krystyn">
         </div>
         <div class="words">
             <p id="bio">Evolving web developer with a background in project management and Kaizen.
@@ -56,7 +56,7 @@
     <div class="sidebyside">
         <div class="knowledge">
             <p class="titles-for-content">Canopus</p>
-            <p class="words-for-content">This project provides users with information about the visibility of the sky to see space objects.</p>
+            <p class="words-for-content">This project provides users with information about the visibility of the sky to see space objects. Click on the picture to access the deplyed project. Click <a href="https://github.com/krysmit/canopus">here</a> to access the Github code.</p>
             <a href="https://boiling-brook-54454.herokuapp.com/" target="_blank">
             <img src="./assets/cap.JPG" alt="screenshot of canopus app" class="featuredcontent"> 
             </a>
@@ -66,14 +66,14 @@
     <div class="sidebyside"> 
         <div id="projHi1">
             <p class="titles-for-content">Event Calendar</p>
-            <p class="words-for-content">A calendar that highlights past, present, and future hours differently while retaining informatoin locally.</p>
+            <p class="words-for-content">A calendar that highlights past, present, and future hours differently while retaining informatoin locally. Click on the picture to access the deplyed project. Click <a href="https://github.com/krysmit/Event-Calendar-05">here</a> to access the Github code.</a></p>
             <a href="https://krysmit.github.io/Event-Calendar-05/" target="_blank">
             <img src="./assets/eventcalendar.png" alt="shiny boxes and pixels" class="othercontent">
             </a>
         </div>
         <div id="projHi2">
             <p class="titles-for-content">Coding Quiz Game</p>
-            <p class="words-for-content">A quiz to review coding information that bases your score on how quickly you finish the game. Records high scores locally.</p>
+            <p class="words-for-content">A quiz to review coding information that bases your score on how quickly you finish the game. Records high scores locally. Click on the picture to access the deplyed project. Click <a href="https://github.com/krysmit/CodingQuiz-04">here</a> to access the Github code.</a></p>
             <a href="https://krysmit.github.io/CodingQuiz-04/" target="_blank">
             <img src="./assets/codingquiz.png" alt="a laptop and glasses on a desk" class="othercontent">
             </a>
